Fix footer social icons spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -243,6 +243,7 @@ img {
 }
 
 .social_icons {
+    display: flex;
     gap: 0.5rem;
 }
 
